--- a/src/App.css
+++ b/src/App.css
@@ -1,2 +1,17 @@
 
 
+.post-list {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 30px;
+}
+
+.page-title {
+    padding-top: 30px;
+    margin-bottom: 60px;
+    font-size: 36px;
+    font-weight: 400;
+}
