--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&family=Manrope:wght@200..800&family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: Manrope, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
@@ -33,6 +34,7 @@ body {
   min-width: 320px;
   min-height: 100vh;
   background-color: #1a1a1a;
+  color: #f2f2f2;
 }
 
 h1 {
