--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,16 @@
-
+.text {
+    font-size: 36px;
+}
 
 .post-list {
     list-style: none;
     margin: 0;
     padding: 0;
     display: grid;
+    align-items: center;
     grid-template-columns: repeat(3, 1fr);
     gap: 30px;
+    margin-bottom: 60px;
 }
 
 .page-title {
