--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -2,7 +2,7 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
-    max-height: 300px;
+    min-height: 300px;
 }
 .card h2 {
     margin: 30px 0;
