--- a/src/index.css
+++ b/src/index.css
@@ -44,13 +44,19 @@ h1 {
 button {
   border-radius: 8px;
   border: 1px solid transparent;
-  padding: 0.6em 1.2em;
+  padding: 10px 20px;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: #664EF1;
   cursor: pointer;
   transition: border-color 0.25s;
+  color: #ffffff;
+  text-transform: uppercase;
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
 }
 button:hover {
   border-color: #646cff;
@@ -60,7 +66,7 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-@media (prefers-color-scheme: light) {
+/* @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
     background-color: #ffffff;
@@ -71,10 +77,14 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
-}
+} */
 
 .container {
   max-width: 1280px;
   padding: 0 20px;
   margin: 0 auto;
+}
+
+.mt-25 {
+  margin-top: 25px;
 }
