--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,3 @@
-.text {
-    font-size: 36px;
-}
-.text-red {
-    color: red;
-}
-
 .post-list {
     list-style: none;
     margin: 0;
@@ -21,4 +14,12 @@
     margin-bottom: 60px;
     font-size: 36px;
     font-weight: 400;
+}
+
+.flex-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding-bottom: 50px;
 }
