--- a/src/index.css
+++ b/src/index.css
@@ -88,3 +88,29 @@ button:focus-visible {
 .mt-25 {
   margin-top: 25px;
 }
+
+.post-list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: grid;
+  align-items: center;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 30px;
+  margin-bottom: 60px;
+}
+
+.page-title {
+  padding-top: 30px;
+  margin-bottom: 60px;
+  font-size: 36px;
+  font-weight: 400;
+}
+
+.flex-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding-bottom: 50px;
+}
