--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,4 +1,7 @@
 .header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     padding: 30px 0;
 }
 
@@ -10,3 +13,4 @@
     align-items: center;
     gap: 40px;
 }
+
