feat: lve seach

--- a/src/components/Search/search.module.css
+++ b/src/components/Search/search.module.css
@@ -1,5 +1,6 @@
-.seacrh__wrapper {
+.search__wrapper {
     display: block;
+    position: relative;
 }
 
 .search__input {
@@ -15,4 +16,15 @@
     background-size: 20px 35px;
     max-width: 500px;
 
+}
+
+
+.search__results {
+    position: absolute;
+    top: 50px;
+    border: 1px solid gray;
+    background-color: white;
+    border-radius: 30px;
+    transition: all 0.5s ease-in-out;
+    padding: 30px;
 }
